main edited gtag

--- a/_includes/components/tag-manager.njk
+++ b/_includes/components/tag-manager.njk
@@ -1,5 +1,5 @@
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-K9Z6HSGW4P"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8Z90JVPXDN"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
 
@@ -8,5 +8,5 @@
     }
 
     gtag('js', new Date());
-    gtag('config', 'G-K9Z6HSGW4P');
+    gtag('config', 'G-8Z90JVPXDN');
 </script>
