--- a/_includes/components/page-footer.njk
+++ b/_includes/components/page-footer.njk
@@ -6,8 +6,8 @@
 
 		<span class="site-footer-owner">
 			{{ metadata.title }} is maintained by
-			<a href="https://www.linkedin.com/in/avivasyuta/" target="_blank">Aleksei&nbsp;Ivasiuta</a> and
-			<a href="https://www.linkedin.com/in/tifongod/" target="_blank">Denis&nbsp;Kolpakov</a>.
+			<a href="{{ authors.avivasyuta.linkedin }}" target="_blank">{{ authors.avivasyuta.name }}</a> and
+			<a href="{{ authors.dakolpakov.linkedin }}" target="_blank">{{ authors.dakolpakov.name }}</a>.
 		</span>
 
 		{% set btnClassName = "btn_dark" %}
