--- a/public/css/post.css
+++ b/public/css/post.css
@@ -35,6 +35,32 @@
 	justify-content: center;
 }
 
+.post-author-data {
+	display: flex;
+	justify-content: right;
+	margin-top: 50px;
+	border-radius: 10px;
+	font-size: 18px;
+}
+
+.post-author-url {
+	color: #0077b5;
+	text-decoration: none;
+	font-weight: bold;
+	display: inline-flex;
+	align-items: center;
+}
+
+.post-author-url:hover {
+	text-decoration: underline;
+}
+
+.linkedin-icon {
+	width: 16px;
+	height: 16px;
+	margin-left: 5px;
+}
+
 .post-original-url {
 	display: flex;
 	justify-content: center;
