main added welcome post

--- a/_includes/components/actions.njk
+++ b/_includes/components/actions.njk
@@ -7,7 +7,7 @@
 		</svg>
 	</a>
 
-	<a href="https://t.me/+5CfB3ShlUekzNGUy" target="_blank" class="btn{% if btnClassName %} {{ btnClassName }}{% endif %}" title="Telegram">
+	<a href="{{ links.tg_invite }}" target="_blank" class="btn{% if btnClassName %} {{ btnClassName }}{% endif %}" title="Telegram">
 		<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24">
 			<path fill="none" stroke="currentColor" stroke-width="2"
 						d="M22 3L2 11l18.5 8L22 3ZM10 20.5l3-4.5m2.5-6.5L9 14l.859 6.012c.078.546.216.537.306-.003L11 15l4.5-5.5Z"/>
