--- a/public/css/post.css
+++ b/public/css/post.css
@@ -55,6 +55,27 @@
 	text-decoration: underline;
 }
 
+.post-tg-data {
+	display: flex;
+	justify-content: right;
+	margin-top: 10px;
+	border-radius: 10px;
+	font-size: 12px;
+	color: #555;
+}
+
+.post-tg-url {
+	color: #0077b5;
+	text-decoration: none;
+	font-weight: bold;
+	display: inline-flex;
+	align-items: center;
+}
+
+.post-tg-url:hover {
+	text-decoration: underline;
+}
+
 .linkedin-icon {
 	width: 16px;
 	height: 16px;
