main filter draft posts from the main page

--- a/content/index.njk
+++ b/content/index.njk
@@ -1,7 +1,7 @@
 ---
 layout: layouts/main.njk
 pagination:
-  data: collections.posts
+  data: collections.publishedPosts
   size: 10
   alias: myPosts
   reverse: true
