main added excludeFromSitemap tag

--- a/content/tags.njk
+++ b/content/tags.njk
@@ -11,6 +11,7 @@ pagination:
   addAllPagesToCollections: true
 layout: layouts/main.njk
 permalink: /tags/{{ tag | slugify }}/
+excludeFromSitemap: true
 ---
 
 <h1 style="text-align: center">Challenges related to «{{ tag }}»</h1>
