--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -40,8 +40,13 @@
         {% set postDate = page.date %}
         {% include "_includes/components/date.njk" %}
     </div>
-
-    <div class="post-card task-card"
+    <div class="post-header_image-container" style="background-image: url('{{ preview_image }}');">
+    {#        <img src="{{ preview_image }}" alt="{{ title }}">#}
+            <div class="post-card_complexity">
+                {% renderFile "_includes/components/complexity.njk", complexity = complexity %}
+            </div>
+    </div>
+    <div class="post-card task-card">
     {{ content | safe }}
 
     {% if author %}
