--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -56,7 +56,7 @@
         </div>
     {% endif %}
     <p class="post-tg-data">
-      📬&nbsp;Enjoyed&nbsp;the&nbsp;post?&nbsp;<strong><a href="{{ links.tg_invite }}" target="_blank" class="post-tg-url">Follow&nbsp;our&nbsp;Telegram&nbsp;channel&nbsp;@thealgoapp</a></strong>&nbsp;for&nbsp;more&nbsp;algorithm&nbsp;insights&nbsp;and&nbsp;coding&nbsp;tips!
+      📬&nbsp;Like&nbsp;this&nbsp;post?&nbsp;<strong><a href="{{ links.tg_invite }}" target="_blank" class="post-tg-url">Follow&nbsp;@thealgoapp</a></strong>&nbsp;for&nbsp;more!
     </p>
     </div>
 
